[gd_scene load_steps=17 format=3 uid="uid://cby4rctl6pv2i"]

[ext_resource type="Script" path="res://scripts/Enemies/zombie_1.gd" id="1_nm0o6"]
[ext_resource type="PackedScene" uid="uid://ria00bcyiikk" path="res://scener/Random shit/floating_money.tscn" id="2_mj3hc"]
[ext_resource type="Texture2D" uid="uid://b3tfls6jmyy4a" path="res://textures/enemies/Zombies-Sheet.png" id="3_nv64m"]
[ext_resource type="AudioStream" uid="uid://cidwdst3h22mt" path="res://ljud/Enemies/zombie-15965.mp3" id="4_7dm35"]
[ext_resource type="Texture2D" uid="uid://dx4yaanjt2hbv" path="res://textures/ljus/2d_lights_and_shadows_neutral_point_light.webp" id="5_pfmbo"]

[sub_resource type="Animation" id="Animation_ijwt0"]
resource_name = "Die"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(28.385, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_dr40e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uxhee"]
resource_name = "Walk"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_eden4"]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit_player"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_4jjoy"]
resource_name = "come_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1e-05), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_5fccq"]
resource_name = "walk"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0698132, -0.0698132, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40qcv"]
_data = {
"Die": SubResource("Animation_ijwt0"),
"RESET": SubResource("Animation_dr40e"),
"Walk": SubResource("Animation_uxhee"),
"attack": SubResource("Animation_eden4"),
"come_up": SubResource("Animation_4jjoy"),
"walk": SubResource("Animation_5fccq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkiow"]
size = Vector2(20.6667, 37.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0uw3c"]
size = Vector2(36.6667, 34)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w180m"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_ooj6q"]
radius = 132.668

[node name="Zombie1" type="CharacterBody2D" groups=["Zombie"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 23
script = ExtResource("1_nm0o6")
popup_scene = ExtResource("2_mj3hc")
price = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -22.6667)
texture = ExtResource("3_nv64m")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_40qcv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.33333, -7.33333)
shape = SubResource("RectangleShape2D_mkiow")
disabled = true

[node name="HitArea" type="Area2D" parent="."]
position = Vector2(0, -22.6667)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0.333324, 1.00003)
shape = SubResource("RectangleShape2D_0uw3c")
disabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_w180m")

[node name="Test_HP" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -62.0
offset_right = 20.0
offset_bottom = -39.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopUpLocation" type="Marker2D" parent="."]
position = Vector2(0, -49.3333)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7dm35")

[node name="SoundArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundArea"]
position = Vector2(-0.666667, -22.6667)
shape = SubResource("CircleShape2D_ooj6q")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Eye1" type="PointLight2D" parent="."]
visible = false
position = Vector2(-2.5, -33.75)
energy = 0.5
texture = ExtResource("5_pfmbo")
texture_scale = 0.08

[node name="Eye2" type="PointLight2D" parent="."]
visible = false
position = Vector2(8.75, -33.75)
energy = 0.5
texture = ExtResource("5_pfmbo")
texture_scale = 0.08

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HitArea" to="." method="_on_hit_area_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_hit_area_area_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="area_entered" from="SoundArea" to="." method="_on_sound_area_area_entered"]
[connection signal="area_exited" from="SoundArea" to="." method="_on_sound_area_area_exited"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
